<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Exercise"
    android:gravity="center_horizontal"
    android:background="#CFE7FF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/custom_button2">

        <TextView
            android:id="@+id/tvMenuExer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eli_morse"
            android:textSize="48sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exercise_part"
        android:textSize="24sp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android.layout_height="wrap_content"
        android:layout_marginTop="20dp"

        >


        <RadioButton
            android:id="@+id/rbNumbers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/numbers_label"
            android:textSize="32sp"
            android:textStyle="bold"
            android:background="#B9DBFF"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/rbWords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/words_label"
            android:textSize="32sp"
            android:textStyle="bold"
            android:background="#B9DBFF"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/rbLetters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/letters_label"
            android:textSize="32sp"
            android:background="#B9DBFF"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

        <RadioButton
            android:id="@+id/rbListening"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/listening_exercise"
            android:textSize="32sp"
            android:background="#B9DBFF"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"/>

    </RadioGroup>


    <Button
        android:id="@+id/bNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next_button"
        android:textSize="38sp"
        android:paddingEnd="80dp"
        android:paddingStart="80dp"/>

</LinearLayout>