<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".Translate"
    android:background="#CFF7FF"
    android:gravity="center_horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/custom_button2">

        <TextView
            android:id="@+id/tvMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eli_morse"
            android:textColor="#000000"
            android:textSize="48sp"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/translate_label"
        android:textSize="24sp"/>

    <EditText
        android:id="@+id/etTranslateIncome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:inputType="textMultiLine"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:padding="10dp"
        android:textSize="30sp"
        android:hint="@string/translate_hint"
        android:textColor="#000000"
        android:background="@drawable/custom_button1"/>

    <TextView
        android:id="@+id/tvTranslateOutcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:textSize="30sp"
        android:background="@drawable/custom_button1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/bAudio"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/audio_button"/>

        <Button
            android:id="@+id/bSwitch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp" />

        <Button
            android:id="@+id/bFlashlight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/flashlight_button"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <Button
            android:id="@+id/bDictionary"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/dictionary_button"/>

        <Button
            android:id="@+id/bTranslate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/translate_label"/>

        <Button
            android:id="@+id/bManualFlashlight"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/manual_flashlight_button"/>

    </LinearLayout>



</LinearLayout>
