<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#CFF7FF"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="30dp"
    tools:context=".LogAndReg">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:padding="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:background="@drawable/custom_button2">


        <TextView
            android:id="@+id/tvMenuLAR"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eli_morse"
            android:layout_marginEnd="10dp"
            android:textSize="48sp"/>


    </LinearLayout>

    <!-- *Fragments* -->
    <!-- TODO:Make moving edit texts -->



    <RadioGroup
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbLogin"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_radio_label"
            android:checked="true"
            android:textSize="24sp"/>

        <RadioButton
            android:id="@+id/rbRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_radio_label"
            android:textSize="24sp"/>
    </RadioGroup>

    <Button
        android:id="@+id/bConfirm"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:text="@string/confirm_button_label"/>

    <FrameLayout
        android:id="@+id/FL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    </FrameLayout>

</LinearLayout>